2005-03-18  Manuel Guesdon <mguesdon@orange-concept.com>
        * GSWeb.framework/NSString+HTML.m
		o fixes in GSWMemMove and 
		testStringByConvertingHTML

2005-03-11  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWRequest.m
                o changes to support various encodings in GSMime

2005-03-10  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWRequest.m
        * GSWeb.framework/NSString+HTML.?
                o replaced dictionaryQueryString by dictionaryQueryStringWithEncoding:
                o replaced decodeURL by decodeURLEncoding:
                debugging and coding together with David Ayers

2005-01-19  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWElementID.m:
                o set static SEL to NULL first
        * GSWeb.framework/GSWDefaultAdaptor.m:
                o fix for __APPLE__

2004-12-31  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWStats.c:
		o fixed type
	* GSWExtensions.framework/GSWCollapsibleComponentContent.m
		o replaced numberWithBool: by GSWNumberXX
	* GSWExtensions.framework/GSWLongResponsePage.m:
		o replaced [context senderID] by GSWContext_senderID()
	* GSWExtensionsGSW.framework/GSWCacheElement.m:
		o use GSWDynamicElement_evaluateValueInContext
		o replaced numberWithBool: by GSWNumberXX
	* GSWeb.framework/GSWAction.h:
		o added -existingSession
	* GSWeb.framework/GSWAction.m:
		o added -existingSession
		o fixed application -logWithFormat:arguments:
	* GSWeb.framework/GSWActiveImage.m
		o use IMPs
		o use GSWIntNumber()
	* GSWeb.framework/GSWApplication+Defaults.m
		o use GSWIntNumber()
	* GSWeb.framework/GSWApplication.h:
		o added -contextClass
		o added -responseClass
		o added -requestClass
	* GSWeb.framework/GSWApplication.m:
		o added -contextClass
		o added -responseClass
		o added -requestClass
		o replaced some [NSDate date] by GSWTime_now()
		o added +initialized to call GSWInitializeAllMisc();
		o removed [xx count] in 'for' loops