@@ -1,3 +1,8 @@
+2005-03-21  Richard Frith-Macdonald <rfm@gnu.org>
+        * GSWeb.framework/GSWRequest.m
+                o cleanup GSMime access and avoid unnecessary setting of
+		charset when the default is OK.
+
 2005-03-18  Manuel Guesdon <mguesdon@orange-concept.com>
         * GSWeb.framework/NSString+HTML.m
 		o fixes in GSWMemMove and 
